# modular-quant-platform

./: LICENSE  PRODUCT_SPEC.md  README.md  UPLOAD_GUIDE.md  config.yaml  pyproject.toml  requirements.txt  setup.py  test_config.yaml  test_platform.py  upload_to_github.sh
examples/: basic_usage.py
src/modular_quant/: __init__.py  cli.py
src/modular_quant/agents/: __init__.py
src/modular_quant/config/: __init__.py
src/modular_quant/core_models/: __init__.py  tdx_parser.py
src/modular_quant/data_sources/: __init__.py
src/modular_quant/hook_manager/: __init__.py
test_results/: test_results_20260321_010326.json  test_results_20260321_010402.json  test_results_20260321_010426.json  test_results_20260321_010634.json  test_results_20260321_013437.json  test_results_20260321_013558.json  test_results_20260321_013834.json  test_results_20260321_013840.json  test_results_20260321_014011.json  test_results_20260321_014027.json  test_results_20260321_014033.json  test_results_20260321_023053.json  test_results_20260321_023548.json  test_results_20260321_025819.json  test_results_20260321_030128.json  test_results_20260321_030223.json  test_results_20260321_030401.json  test_results_20260321_030433.json
